LB-2693 Connected Accounts add password popup is redesigned

--- a/Depo/Depo/Presentation/UserStories/Others/PasswordEnterPopup/PasswordEnterPopup.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/PasswordEnterPopup/PasswordEnterPopup.xib
@@ -13,11 +13,12 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PasswordEnterPopup" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="captchaView" destination="sXa-dE-8dM" id="zQy-8m-kLX"/>
+                <outlet property="container" destination="TFh-LM-KAr" id="eB5-9T-l1G"/>
                 <outlet property="descriptionLabel" destination="Z6x-0Z-4Ca" id="ObZ-yU-aDW"/>
+                <outlet property="newPasswordView" destination="0ug-HA-cfy" id="NYO-cI-gWb"/>
                 <outlet property="okButton" destination="xM1-yz-AR2" id="ZaJ-sm-4in"/>
                 <outlet property="passwordsStackView" destination="GgI-ax-mYA" id="0rZ-WF-p7W"/>
-                <outlet property="popupView" destination="uQd-mR-j3p" id="RtU-mW-vu9"/>
-                <outlet property="seperatorView" destination="8B5-tU-FFG" id="XEi-OE-gw2"/>
+                <outlet property="repeatPasswordView" destination="4hV-mv-Av4" id="MB1-Vy-MYX"/>
                 <outlet property="view" destination="ix6-YO-yfz" id="ZED-tV-WaB"/>
             </connections>
         </placeholder>
@@ -26,93 +27,90 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uQd-mR-j3p" customClass="IQPreviousNextView" customModule="IQKeyboardManagerSwift">
-                    <rect key="frame" x="12" y="7" width="296" height="554"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TFh-LM-KAr" userLabel="Container">
+                    <rect key="frame" x="12" y="190.5" width="296" height="377.5"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="7lQ-90-FuU">
-                            <rect key="frame" x="20" y="30" width="256" height="20.5"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="264" placeholderIntrinsicHeight="209" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="GgI-ax-mYA">
+                            <rect key="frame" x="16" y="16" width="264" height="314.5"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6x-0Z-4Ca">
-                                    <rect key="frame" x="0.0" y="0.0" width="256" height="20.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="264" height="20.5"/>
+                                    <color key="backgroundColor" name="background"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0ug-HA-cfy" userLabel="PasswordTextField" customClass="ProfilePasswordEnterView" customModule="Billo" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="20.5" width="264" height="56"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="56" id="pQo-c6-RTg"/>
+                                    </constraints>
+                                </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4hV-mv-Av4" userLabel="RePasswordTextField" customClass="ProfilePasswordEnterView" customModule="Billo" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="76.5" width="264" height="56"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="56" id="5za-4v-BjP"/>
+                                    </constraints>
+                                </view>
+                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="289" placeholderIntrinsicHeight="164.5" translatesAutoresizingMaskIntoConstraints="NO" id="sXa-dE-8dM" customClass="CaptchaView" customModule="Billo" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="132.5" width="264" height="137"/>
+                                    <color key="backgroundColor" name="primaryBackground"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="137" id="Hsz-DJ-osb"/>
+                                    </constraints>
+                                </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ldh-IX-g1J" userLabel="ButtonContent">
+                                    <rect key="frame" x="0.0" y="269.5" width="264" height="45"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xM1-yz-AR2" customClass="RoundedButton" customModule="Billo" customModuleProvider="target">
+                                            <rect key="frame" x="56" y="0.0" width="152" height="45"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="45" id="Sa1-tC-Efm"/>
+                                            </constraints>
+                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                            <state key="normal" title="Button"/>
+                                            <connections>
+                                                <action selector="onOkeyButton:" destination="-1" eventType="touchUpInside" id="btr-q4-jym"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                    <color key="backgroundColor" name="background"/>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="xM1-yz-AR2" secondAttribute="trailing" constant="56" id="0Im-gM-XND"/>
+                                        <constraint firstItem="xM1-yz-AR2" firstAttribute="top" secondItem="ldh-IX-g1J" secondAttribute="top" id="bwi-Mo-2xX"/>
+                                        <constraint firstAttribute="bottom" secondItem="xM1-yz-AR2" secondAttribute="bottom" id="fSL-TE-zIT"/>
+                                        <constraint firstItem="xM1-yz-AR2" firstAttribute="leading" secondItem="ldh-IX-g1J" secondAttribute="leading" constant="56" id="mRk-7c-zz6"/>
+                                    </constraints>
+                                </view>
                             </subviews>
                         </stackView>
-                        <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="264" placeholderIntrinsicHeight="209" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="GgI-ax-mYA">
-                            <rect key="frame" x="16" y="70.5" width="264" height="209"/>
-                        </stackView>
-                        <view contentMode="scaleToFill" placeholderIntrinsicWidth="289" placeholderIntrinsicHeight="164.5" translatesAutoresizingMaskIntoConstraints="NO" id="sXa-dE-8dM" customClass="CaptchaView" customModule="Billo" customModuleProvider="target">
-                            <rect key="frame" x="16" y="287.5" width="264" height="164.5"/>
-                            <color key="backgroundColor" name="primaryBackground"/>
-                        </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8B5-tU-FFG">
-                            <rect key="frame" x="0.0" y="472" width="296" height="1"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="1" id="MMA-PH-ald"/>
-                            </constraints>
-                        </view>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xM1-yz-AR2">
-                            <rect key="frame" x="16" y="493" width="264" height="31"/>
-                            <state key="normal" title="Button"/>
-                            <buttonConfiguration key="configuration" style="plain" title="Button"/>
-                            <connections>
-                                <action selector="onOkeyButton:" destination="-1" eventType="touchUpInside" id="btr-q4-jym"/>
-                            </connections>
-                        </button>
                     </subviews>
-                    <color key="backgroundColor" name="primaryBackground"/>
+                    <color key="backgroundColor" name="background"/>
                     <constraints>
-                        <constraint firstItem="GgI-ax-mYA" firstAttribute="leading" secondItem="uQd-mR-j3p" secondAttribute="leading" constant="16" id="16a-77-UIv"/>
-                        <constraint firstAttribute="trailing" secondItem="7lQ-90-FuU" secondAttribute="trailing" constant="20" id="1Ce-Pb-iXi"/>
-                        <constraint firstItem="xM1-yz-AR2" firstAttribute="top" secondItem="8B5-tU-FFG" secondAttribute="bottom" constant="20" id="4bg-a4-swx"/>
-                        <constraint firstAttribute="bottom" secondItem="xM1-yz-AR2" secondAttribute="bottom" constant="30" id="4cw-rA-2eU"/>
-                        <constraint firstAttribute="trailing" secondItem="8B5-tU-FFG" secondAttribute="trailing" id="FHk-bN-8i5"/>
-                        <constraint firstItem="sXa-dE-8dM" firstAttribute="leading" secondItem="uQd-mR-j3p" secondAttribute="leading" constant="16" id="Fms-tl-iik"/>
-                        <constraint firstItem="GgI-ax-mYA" firstAttribute="top" secondItem="7lQ-90-FuU" secondAttribute="bottom" constant="20" id="FpE-E5-Cyd"/>
-                        <constraint firstAttribute="trailing" secondItem="GgI-ax-mYA" secondAttribute="trailing" constant="16" id="KzP-oV-AIY"/>
-                        <constraint firstItem="sXa-dE-8dM" firstAttribute="top" secondItem="GgI-ax-mYA" secondAttribute="bottom" constant="8" id="LB4-9U-d6h"/>
-                        <constraint firstItem="7lQ-90-FuU" firstAttribute="leading" secondItem="uQd-mR-j3p" secondAttribute="leading" constant="20" id="M1X-mZ-uDN"/>
-                        <constraint firstItem="7lQ-90-FuU" firstAttribute="top" secondItem="uQd-mR-j3p" secondAttribute="top" constant="30" id="TM3-eN-gB7"/>
-                        <constraint firstItem="8B5-tU-FFG" firstAttribute="top" secondItem="sXa-dE-8dM" secondAttribute="bottom" constant="20" id="V15-Xo-lEC"/>
-                        <constraint firstAttribute="trailing" secondItem="sXa-dE-8dM" secondAttribute="trailing" constant="16" id="a3C-Pw-mVe"/>
-                        <constraint firstItem="xM1-yz-AR2" firstAttribute="leading" secondItem="uQd-mR-j3p" secondAttribute="leading" constant="16" id="oMr-dH-Jdr"/>
-                        <constraint firstAttribute="trailing" secondItem="xM1-yz-AR2" secondAttribute="trailing" constant="16" id="rpH-RN-1wE"/>
-                        <constraint firstItem="8B5-tU-FFG" firstAttribute="leading" secondItem="uQd-mR-j3p" secondAttribute="leading" id="t5r-HU-yEF"/>
-                        <constraint firstAttribute="width" constant="368" id="wpx-Dk-6Ce"/>
+                        <constraint firstAttribute="trailing" secondItem="GgI-ax-mYA" secondAttribute="trailing" constant="16" id="ICa-Lg-1r3"/>
+                        <constraint firstItem="GgI-ax-mYA" firstAttribute="leading" secondItem="TFh-LM-KAr" secondAttribute="leading" constant="16" id="WgT-hp-ec3"/>
+                        <constraint firstAttribute="bottom" secondItem="GgI-ax-mYA" secondAttribute="bottom" constant="47" id="c6j-hh-66K"/>
+                        <constraint firstItem="GgI-ax-mYA" firstAttribute="top" secondItem="TFh-LM-KAr" secondAttribute="top" constant="16" id="iOi-3t-zev"/>
                     </constraints>
-                    <variation key="default">
-                        <mask key="constraints">
-                            <exclude reference="wpx-Dk-6Ce"/>
-                        </mask>
-                    </variation>
-                    <variation key="widthClass=regular">
-                        <mask key="constraints">
-                            <include reference="wpx-Dk-6Ce"/>
-                        </mask>
-                    </variation>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="N5c-6g-D9j"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="uQd-mR-j3p" firstAttribute="leading" secondItem="N5c-6g-D9j" secondAttribute="leading" constant="12" id="0l1-Xz-wXx"/>
-                <constraint firstItem="uQd-mR-j3p" firstAttribute="centerY" secondItem="N5c-6g-D9j" secondAttribute="centerY" id="6Jj-ft-XyZ"/>
-                <constraint firstItem="uQd-mR-j3p" firstAttribute="centerX" secondItem="N5c-6g-D9j" secondAttribute="centerX" id="Eut-h7-b6w"/>
-                <constraint firstItem="N5c-6g-D9j" firstAttribute="trailing" secondItem="uQd-mR-j3p" secondAttribute="trailing" constant="12" id="PA7-Xi-sMD"/>
+                <constraint firstItem="TFh-LM-KAr" firstAttribute="top" relation="greaterThanOrEqual" secondItem="N5c-6g-D9j" secondAttribute="top" constant="150" id="4oE-Hb-DYv"/>
+                <constraint firstItem="TFh-LM-KAr" firstAttribute="leading" secondItem="N5c-6g-D9j" secondAttribute="leading" constant="12" id="Ztp-Xc-Hqi"/>
+                <constraint firstAttribute="bottom" secondItem="TFh-LM-KAr" secondAttribute="bottom" id="pSw-3e-aYV"/>
+                <constraint firstItem="N5c-6g-D9j" firstAttribute="trailing" secondItem="TFh-LM-KAr" secondAttribute="trailing" constant="12" id="zUf-Cb-p2F"/>
             </constraints>
-            <variation key="widthClass=regular">
-                <mask key="constraints">
-                    <exclude reference="PA7-Xi-sMD"/>
-                    <exclude reference="0l1-Xz-wXx"/>
-                </mask>
-            </variation>
             <point key="canvasLocation" x="-210.1449275362319" y="68.973214285714278"/>
         </view>
     </objects>
     <resources>
+        <namedColor name="background">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
