--- a/Depo/Depo/Presentation/UserStories/Others/PasswordEnterPopup/PasswordEnterPopup.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/PasswordEnterPopup/PasswordEnterPopup.xib
@@ -28,10 +28,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TFh-LM-KAr" userLabel="Container">
-                    <rect key="frame" x="12" y="190.5" width="296" height="377.5"/>
+                    <rect key="frame" x="12" y="170" width="296" height="398"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="264" placeholderIntrinsicHeight="209" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="GgI-ax-mYA">
-                            <rect key="frame" x="16" y="16" width="264" height="314.5"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="264" placeholderIntrinsicHeight="209" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="GgI-ax-mYA">
+                            <rect key="frame" x="16" y="16" width="264" height="335"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6x-0Z-4Ca">
                                     <rect key="frame" x="0.0" y="0.0" width="264" height="20.5"/>
@@ -41,34 +41,22 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0ug-HA-cfy" userLabel="PasswordTextField" customClass="ProfilePasswordEnterView" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="20.5" width="264" height="56"/>
+                                    <rect key="frame" x="0.0" y="20.5" width="264" height="50"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="56" id="pQo-c6-RTg"/>
-                                    </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4hV-mv-Av4" userLabel="RePasswordTextField" customClass="ProfilePasswordEnterView" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="76.5" width="264" height="56"/>
+                                    <rect key="frame" x="0.0" y="70.5" width="264" height="50"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="56" id="5za-4v-BjP"/>
-                                    </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" placeholderIntrinsicWidth="289" placeholderIntrinsicHeight="164.5" translatesAutoresizingMaskIntoConstraints="NO" id="sXa-dE-8dM" customClass="CaptchaView" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="132.5" width="264" height="137"/>
+                                    <rect key="frame" x="0.0" y="120.5" width="264" height="164.5"/>
                                     <color key="backgroundColor" name="primaryBackground"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="137" id="Hsz-DJ-osb"/>
-                                    </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ldh-IX-g1J" userLabel="ButtonContent">
-                                    <rect key="frame" x="0.0" y="269.5" width="264" height="45"/>
+                                    <rect key="frame" x="0.0" y="285" width="264" height="50"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xM1-yz-AR2" customClass="RoundedButton" customModule="Billo" customModuleProvider="target">
-                                            <rect key="frame" x="56" y="0.0" width="152" height="45"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="45" id="Sa1-tC-Efm"/>
-                                            </constraints>
+                                            <rect key="frame" x="56" y="0.0" width="152" height="50"/>
                                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                             <state key="normal" title="Button"/>
                                             <connections>
@@ -79,6 +67,7 @@
                                     <color key="backgroundColor" name="background"/>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="xM1-yz-AR2" secondAttribute="trailing" constant="56" id="0Im-gM-XND"/>
+                                        <constraint firstAttribute="height" constant="45" id="ESE-cg-ntU"/>
                                         <constraint firstItem="xM1-yz-AR2" firstAttribute="top" secondItem="ldh-IX-g1J" secondAttribute="top" id="bwi-Mo-2xX"/>
                                         <constraint firstAttribute="bottom" secondItem="xM1-yz-AR2" secondAttribute="bottom" id="fSL-TE-zIT"/>
                                         <constraint firstItem="xM1-yz-AR2" firstAttribute="leading" secondItem="ldh-IX-g1J" secondAttribute="leading" constant="56" id="mRk-7c-zz6"/>
