--- a/Depo/Depo/Presentation/UserStories/Settings/AutoSync/View/SubViews/AutoSyncHeaderTableViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/AutoSync/View/SubViews/AutoSyncHeaderTableViewCell.xib
@@ -27,40 +27,41 @@
                         <rect key="frame" x="20" y="0.0" width="280" height="76"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7HM-Vn-sml">
-                                <rect key="frame" x="0.0" y="0.0" width="280" height="44"/>
+                                <rect key="frame" x="0.0" y="0.0" width="280" height="40"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hjC-Gv-rOm" userLabel="Title Label">
-                                        <rect key="frame" x="0.0" y="0.0" width="31" height="44"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="255" height="40"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="44" id="OMB-E4-tIJ"/>
+                                            <constraint firstAttribute="height" constant="40" id="8TD-gj-fhb"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="TurkcellSaturaDem" family="TurkcellSaturaDem" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Select" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="gUC-Ix-fdq" userLabel="Option Label">
-                                        <rect key="frame" x="201.5" y="13" width="42.5" height="18"/>
+                                        <rect key="frame" x="201.5" y="11" width="42.5" height="18"/>
                                         <fontDescription key="fontDescription" name="TurkcellSaturaDem" family="TurkcellSaturaDem" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconArrowDownSmall" translatesAutoresizingMaskIntoConstraints="NO" id="I9V-oc-mqR">
-                                        <rect key="frame" x="256" y="10" width="24" height="24"/>
+                                        <rect key="frame" x="256" y="8" width="24" height="24"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" name="secondaryBackground"/>
                                 <constraints>
                                     <constraint firstItem="gUC-Ix-fdq" firstAttribute="centerY" secondItem="7HM-Vn-sml" secondAttribute="centerY" id="0Hv-F1-p3R"/>
                                     <constraint firstItem="I9V-oc-mqR" firstAttribute="centerY" secondItem="7HM-Vn-sml" secondAttribute="centerY" id="2nq-rp-wIu"/>
-                                    <constraint firstAttribute="bottom" secondItem="hjC-Gv-rOm" secondAttribute="bottom" id="KBF-JJ-dwt"/>
+                                    <constraint firstItem="hjC-Gv-rOm" firstAttribute="top" secondItem="7HM-Vn-sml" secondAttribute="top" id="Dqu-t1-93G"/>
+                                    <constraint firstAttribute="bottom" secondItem="hjC-Gv-rOm" secondAttribute="bottom" id="NLj-yi-C6r"/>
                                     <constraint firstAttribute="trailing" secondItem="I9V-oc-mqR" secondAttribute="trailing" id="RCR-Z6-yt3"/>
                                     <constraint firstItem="I9V-oc-mqR" firstAttribute="leading" secondItem="gUC-Ix-fdq" secondAttribute="trailing" constant="12" id="YQm-bh-8nK"/>
-                                    <constraint firstItem="hjC-Gv-rOm" firstAttribute="leading" secondItem="7HM-Vn-sml" secondAttribute="leading" id="dvQ-1u-Rzk"/>
-                                    <constraint firstItem="hjC-Gv-rOm" firstAttribute="top" secondItem="7HM-Vn-sml" secondAttribute="top" id="wvW-RZ-yYZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="hjC-Gv-rOm" secondAttribute="trailing" constant="25" id="ndF-qz-Ak4"/>
+                                    <constraint firstItem="hjC-Gv-rOm" firstAttribute="leading" secondItem="7HM-Vn-sml" secondAttribute="leading" id="u19-Xs-Yqh"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g1t-cv-Zis" customClass="InsetsLabel" customModule="Billo" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="48" width="280" height="28"/>
+                                <rect key="frame" x="0.0" y="44" width="280" height="32"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
