--- a/Depo/Depo/Presentation/UserStories/Others/AlertFilesActionsSheet/View/AlertFilesActionView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/AlertFilesActionsSheet/View/AlertFilesActionView.xib
@@ -15,13 +15,14 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gpH-VZ-eGr">
-                    <rect key="frame" x="16" y="14" width="24" height="24"/>
+                    <rect key="frame" x="16" y="14" width="48" height="24"/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="gpH-VZ-eGr" secondAttribute="height" multiplier="1:1" id="Ate-w7-GJq"/>
+                        <constraint firstAttribute="width" constant="48" id="OOl-Hj-RbK"/>
+                        <constraint firstAttribute="height" constant="24" id="gIo-k2-PxL"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qzQ-gX-eh0">
-                    <rect key="frame" x="54" y="14" width="344" height="24"/>
+                    <rect key="frame" x="78" y="14" width="320" height="24"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
